tests/negative_tests/syntax_errors/incomplete_function.c
// INVALID - Syntax Error: incomplete function declaration
// Expected: "expected '{' to start function body"
int foo(int x)
// Missing body
